--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
-			<version>6.5.11</version>
+			<version>6.5.12</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -420,6 +420,16 @@
 			<artifactId>jackson-jaxrs-xml-provider</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15</artifactId>
+			<version>1.46</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcmail-jdk15</artifactId>
+			<version>1.46</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -428,8 +438,8 @@
 		<lucene.version>3.6.2</lucene.version>
 		<httpclient.version>4.3.1</httpclient.version>
 		<poi.version>3.10-beta2</poi.version>
-		<selenium.version>2.38.0</selenium.version>
-		<zk.version>7.0.1.FL.20131213</zk.version>
+		<selenium.version>2.39.0</selenium.version>
+		<zk.version>7.0.1.FL.20131216</zk.version>
 	</properties>
 	<description>OpenSearchServer is a powerful, enterprise-class, search engine program. Using the web user interface, the crawlers (web, file, database, ...) and the REST/RESTFul API you will be able to integrate quickly and easily advanced full-text search capabilities in your application. OpenSearchServer runs on Windows and Linux/Unix/BSD.</description>
 	<organization>
