--- a/pom.xml
+++ b/pom.xml
@@ -435,6 +435,11 @@
 			<artifactId>platform</artifactId>
 			<version>3.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.nativelibs4java</groupId>
+			<artifactId>bridj</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
