--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.2.1</version>
+			<version>2.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.james</groupId>
@@ -289,7 +289,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
+			<version>1.7.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
@@ -416,7 +416,7 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.1</version>
+			<version>4.2</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -425,7 +425,7 @@
 		<cxf.version>2.7.7</cxf.version>
 		<lucene.version>3.6.2</lucene.version>
 		<httpclient.version>4.3.2</httpclient.version>
-		<poi.version>3.10-beta2</poi.version>
+		<poi.version>3.10-FINAL</poi.version>
 		<selenium.version>2.39.0</selenium.version>
 		<zk.version>6.5.3</zk.version>
 	</properties>
