--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,7 @@
 
 	<!-- Stop any running OpenSearchServer -->
 	<target name="stop" description="Stop any running embedded Tomcat">
-		<exec executable="jps" output="${temp}/jps.out" />
+		<exec executable="${env.JAVA_HOME}/bin/jps" output="${temp}/jps.out" />
 		<loadfile srcfile="${temp}/jps.out" property="oss_pid">
 			<filterchain>
 				<linecontainsregexp>
