--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jaeksoft</groupId>
 	<artifactId>opensearchserver</artifactId>
@@ -299,6 +300,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
@@ -497,14 +499,9 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.1</version>
-				<configuration>
-					<path>/</path>
-					<uriEncoding>UTF-8</uriEncoding>
-					<port>9090</port>
-				</configuration>
 				<executions>
 					<execution>
-						<id>tomcat-run</id>
+						<id>tomcat-package</id>
 						<goals>
 							<goal>exec-war-only</goal>
 						</goals>
@@ -554,35 +551,25 @@
 							</extraDependencies>
 						</configuration>
 					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
-				<executions>
 					<execution>
-						<id>oss-start</id>
-						<phase>pre-integration-test</phase>
+						<id>tomcat-run</id>
 						<goals>
 							<goal>run</goal>
 						</goals>
+						<phase>pre-integration-test</phase>
 						<configuration>
-							<tasks>
-								<ant antfile="${basedir}/build.xml" target="start" />
-							</tasks>
+							<path>/</path>
+							<uriEncoding>UTF-8</uriEncoding>
+							<port>9090</port>
+							<fork>true</fork>
 						</configuration>
 					</execution>
 					<execution>
-						<id>oss-stop</id>
-						<phase>post-integration-test</phase>
+						<id>tomcat-shutdown</id>
 						<goals>
-							<goal>run</goal>
+							<goal>shutdown</goal>
 						</goals>
-						<configuration>
-							<tasks>
-								<ant antfile="${basedir}/build.xml" target="stop" />
-							</tasks>
-						</configuration>
+						<phase>post-integration-test</phase>
 					</execution>
 				</executions>
 			</plugin>
