Support of specific classpath for external parser

--- a/pom.xml
+++ b/pom.xml
@@ -507,6 +507,7 @@
 						</goals>
 						<phase>package</phase>
 						<configuration>
+							<path>/</path>
 							<extraDependencies>
 								<extraDependency>
 									<groupId>mysql</groupId>
