--- a/pom.xml
+++ b/pom.xml
@@ -555,6 +555,7 @@
 						</goals>
 						<phase>package</phase>
 						<configuration>
+							<path>/</path>
 							<extraDependencies>
 								<extraDependency>
 									<groupId>mysql</groupId>
