--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+<dependency>
+  <groupId>org.apache.cxf</groupId>
+  <artifactId>cxf-rt-rs-client</artifactId>
+  <version>${cxf.version}</version>
+</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
@@ -141,7 +146,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.4.2</version>
+			<version>2.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.james</groupId>
@@ -176,7 +181,7 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox-ant</artifactId>
-			<version>1.8.4</version>
+			<version>1.8.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
@@ -318,7 +323,7 @@
 		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>woodstox-core-asl</artifactId>
-			<version>4.3.0</version>
+			<version>4.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -403,7 +408,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.8</version>
+			<version>1.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -476,12 +481,12 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<cxf.version>2.7.7</cxf.version>
+		<cxf.version>3.0.0</cxf.version>
 		<lucene.version>3.6.2</lucene.version>
 		<httpclient.version>4.3.3</httpclient.version>
 		<poi.version>3.10-FINAL</poi.version>
-		<selenium.version>2.41.0</selenium.version>
-		<zk.version>7.0.2.FL.20140425</zk.version>
+		<selenium.version>2.42.0</selenium.version>
+		<zk.version>7.0.3.FL.20140528</zk.version>
 	</properties>
 	<description>OpenSearchServer is a powerful, enterprise-class, search engine program. Using the web user interface, the crawlers (web, file, database, ...) and the REST/RESTFul API you will be able to integrate quickly and easily advanced full-text search capabilities in your application. OpenSearchServer runs on Windows and Linux/Unix/BSD.</description>
 	<organization>
@@ -540,8 +545,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
