--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,6 @@
 	<ciManagement>
 		<url>http://www.open-search-server.com/jenkins</url>
 	</ciManagement>
-	<repositories>
-		<repository>
-			<id>ZK CE</id>
-			<name>ZK CE Repository</name>
-			<url>http://mavensync.zkoss.org/maven2</url>
-		</repository>
-	</repositories>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
@@ -96,7 +89,7 @@
 		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
-			<version>1.9.20</version>
+			<version>1.9.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ccil.cowan.tagsoup</groupId>
@@ -146,7 +139,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.5.0</version>
+			<version>2.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.james</groupId>
@@ -338,7 +331,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>2.3.3</version>
+			<version>2.4.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jackson-core</artifactId>
@@ -439,7 +432,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-xml-provider</artifactId>
-			<version>2.3.3</version>
+			<version>2.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
@@ -483,10 +476,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cxf.version>2.7.11</cxf.version>
 		<lucene.version>3.6.2</lucene.version>
-		<httpclient.version>4.3.3</httpclient.version>
+		<httpclient.version>4.3.4</httpclient.version>
 		<poi.version>3.10-FINAL</poi.version>
-		<selenium.version>2.42.0</selenium.version>
-		<zk.version>7.0.3.FL.20140528</zk.version>
+		<selenium.version>2.42.2</selenium.version>
+		<zk.version>7.0.2</zk.version>
 	</properties>
 	<description>OpenSearchServer is a powerful, enterprise-class, search engine program. Using the web user interface, the crawlers (web, file, database, ...) and the REST/RESTFul API you will be able to integrate quickly and easily advanced full-text search capabilities in your application. OpenSearchServer runs on Windows and Linux/Unix/BSD.</description>
 	<organization>
