--- a/pom.xml
+++ b/pom.xml
@@ -429,6 +429,11 @@
 			<artifactId>antlr4-runtime</artifactId>
 			<version>4.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
