--- a/pom.xml
+++ b/pom.xml
@@ -730,29 +730,29 @@
 					</execution>
 				</executions>
 			</plugin>
-           <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>rpm-maven-plugin</artifactId>
-                <version>2.1-alpha-4</version>
-                <executions>
-                    <execution>
-                        <id>generate-rpm</id>
-                        <goals>
-                            <goal>rpm</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <license>GPLv3 (c) 2008-2014, Jaeksoft SARL</license>
-                    <group>Application/Internet</group>
-                    <packager>OpenSearchServer</packager>
-                    <version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</version>
-                    <prefix>/usr/local</prefix>
- 					<mappings>
-      					<mapping>
-        					<directory>/usr/share/opensearchserver</directory>
-        					<username>opensearchserver</username>
-        					<groupname>daemon</groupname>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>rpm-maven-plugin</artifactId>
+				<version>2.1-alpha-4</version>
+				<executions>
+					<execution>
+						<id>generate-rpm</id>
+						<goals>
+							<goal>rpm</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<license>GPLv3 (c) 2008-2014, Jaeksoft SARL</license>
+					<group>Application/Internet</group>
+					<packager>OpenSearchServer</packager>
+					<version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</version>
+					<prefix>/usr/local</prefix>
+					<mappings>
+						<mapping>
+							<directory>/usr/share/opensearchserver</directory>
+							<username>opensearchserver</username>
+							<groupname>daemon</groupname>
 							<sources>
 								<source>
 									<location>${project.build.directory}/${project.build.finalName}-war-exec.jar</location>
@@ -762,57 +762,61 @@
 									<location>src/deb/init.d/opensearchserver</location>
 								</source>
 							</sources>
-      					</mapping>
-     					<mapping>
-        					<directory>/usr/share/opensearchserver/ext</directory>
+						</mapping>
+						<mapping>
+							<directory>/usr/share/opensearchserver/ext</directory>
 							<sources>
 								<source>
 									<location>lib/ext</location>
 								</source>
 							</sources>
-      					</mapping>
-      					<mapping>
-        					<directory>/etc</directory>
-        					<configuration>true</configuration>
+						</mapping>
+						<mapping>
+							<directory>/etc</directory>
+							<configuration>true</configuration>
 							<sources>
 								<source>
 									<location>src/deb/etc/opensearchserver</location>
 								</source>
 							</sources>
-      					</mapping>
-      					<mapping>
-        					<directory>/var/log/opensearchserver</directory>
-        					<username>opensearchserver</username>
-      					</mapping>
-     					<mapping>
-        					<directory>/var/lib/opensearchserver</directory>
-        					<username>opensearchserver</username>
-      					</mapping>
-      					<mapping>
-        					<directory>/var/lib/opensearchserver/data</directory>
-        					<username>opensearchserver</username>
-      					</mapping>
+						</mapping>
+						<mapping>
+							<directory>/var/log/opensearchserver</directory>
+							<username>opensearchserver</username>
+						</mapping>
+						<mapping>
+							<directory>/var/lib/opensearchserver</directory>
+							<username>opensearchserver</username>
+						</mapping>
+						<mapping>
+							<directory>/var/lib/opensearchserver/data</directory>
+							<username>opensearchserver</username>
+						</mapping>
 						<mapping>
 							<directory>/var/lib/opensearchserver/data/logs</directory>
-        					<username>opensearchserver</username>
+							<username>opensearchserver</username>
 							<sources>
-      							<softlinkSource>
-                					<location>/var/log/opensearchserver</location>
+								<softlinkSource>
+									<location>/var/log/opensearchserver</location>
 								</softlinkSource>
 							</sources>
 						</mapping>
-    				</mappings>
+					</mappings>
 					<requires>
 						<require>java &gt;= 1.7.0</require>
 					</requires>
 					<preinstallScriptlet>
-						<script>getent passwd opensearchserver >/dev/null || useradd -r -g daemon -d /var/lib/opensearchserver -s /bin/bash -c "OpenSearchServer" opensearchserver</script>
+						<script>getent passwd opensearchserver >/dev/null || useradd -r
+							-g daemon -d /var/lib/opensearchserver -s /bin/bash -c
+							"OpenSearchServer" opensearchserver</script>
 					</preinstallScriptlet>
 					<postinstallScriptlet>
-						<script>cp -f /usr/share/opensearchserver/opensearchserver /etc/init.d/opensearchserver &amp;&amp; chmod a+x /etc/init.d/opensearchserver</script>
+						<script>cp -f /usr/share/opensearchserver/opensearchserver
+							/etc/init.d/opensearchserver &amp;&amp; chmod a+x
+							/etc/init.d/opensearchserver</script>
 					</postinstallScriptlet>
-                </configuration>
-            </plugin>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
