--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.5.1</version>
+			<version>2.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.james</groupId>
@@ -440,7 +440,7 @@
 		<cxf.version>2.7.11</cxf.version>
 		<lucene.version>3.6.2</lucene.version>
 		<httpclient.version>4.3.4</httpclient.version>
-		<poi.version>3.10-FINAL</poi.version>
+		<poi.version>3.11-beta1</poi.version>
 		<selenium.version>2.42.2</selenium.version>
 		<zk.version>6.5.4</zk.version>
 	</properties>
