--- a/pom.xml
+++ b/pom.xml
@@ -441,7 +441,7 @@
 		<cxf.version>2.7.11</cxf.version>
 		<lucene.version>3.6.2</lucene.version>
 		<httpclient.version>4.3.4</httpclient.version>
-		<poi.version>3.10-FINAL</poi.version>
+		<poi.version>3.11-beta1</poi.version>
 		<selenium.version>2.42.2</selenium.version>
 		<zk.version>7.0.2</zk.version>
 	</properties>
