--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- License Agreement for OpenSearchServer Copyright (C) 2008-2011 Emmanuel 
+<!-- License Agreement for OpenSearchServer Copyright (C) 2008-2014 Emmanuel 
 	Keller / Jaeksoft http://www.open-search-server.com This file is part of 
 	OpenSearchServer. OpenSearchServer is free software: you can redistribute 
 	it and/or modify it under the terms of the GNU General Public License as 
@@ -258,6 +258,16 @@
 		<url-pattern>/services/*</url-pattern>
 	</servlet-mapping>
 	<!-- End CXF -->
+
+	<filter>
+		<filter-name>NtlmWebFilter</filter-name>
+		<filter-class>com.jaeksoft.searchlib.web.NtlmWebFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>NtlmWebFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<session-config>
 		<session-timeout>60</session-timeout>
