Support of NTLMv2

--- a/pom.xml
+++ b/pom.xml
@@ -433,6 +433,11 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.poweredge.ntlmv2-auth</groupId>
+			<artifactId>ntlmv2-filter</artifactId>
+			<version>1.0.5</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
