Update to servlet 3.0

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- License Agreement for OpenSearchServer Copyright (C) 2008-2011 Emmanuel 
+<!-- License Agreement for OpenSearchServer Copyright (C) 2008-2014 Emmanuel 
 	Keller / Jaeksoft http://www.open-search-server.com This file is part of 
 	OpenSearchServer. OpenSearchServer is free software: you can redistribute 
 	it and/or modify it under the terms of the GNU General Public License as 
@@ -11,9 +11,10 @@
 	a copy of the GNU General Public License along with Jaeksoft OpenSearchServer. 
 	If not, see <http://www.gnu.org/licenses/>. -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
 	<display-name>${project.name} - ${project.version}</display-name>
 	<listener>
 		<description>
