--- a/pom.xml
+++ b/pom.xml
@@ -486,6 +486,11 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.7</version>
 		</dependency>
+		<dependency>
+			<groupId>com.atlascopco</groupId>
+			<artifactId>hunspell-bridj</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
