--- a/src/cc/Makefile
+++ b/src/cc/Makefile
@@ -1,5 +1,6 @@
 CXX = g++
-CPPFLAGS = -Wall -g -fPIC -O3
+CCFLAGS = -Wall -g -fPIC -O3
+LDFLAGS  = -lc -shared
 INCLUDES = \
 	-I/System/Library/Frameworks/JavaVM.framework/Versions/A/Headers \
 	-I/Users/ekeller/C_Stuffs/boost_1_57_0
@@ -9,15 +10,46 @@ SRCS = \
 OBJS = $(SRCS:.cc=.o)
 MAIN = nativeoss
 
+ifeq ($(OS),Windows_NT)
+	CCFLAGS += -D WIN32
+	LIBNAME = ${MAIN}.dll
+	ifeq ($(PROCESSOR_ARCHITECTURE),AMD64)
+		CCFLAGS += -D AMD64
+		endif
+	ifeq ($(PROCESSOR_ARCHITECTURE),x86)
+		CCFLAGS += -D IA32
+	endif
+else
+	UNAME_S := $(shell uname -s)
+	ifeq ($(UNAME_S),Linux)
+		CCFLAGS += -D LINUX
+		LIBNAME = lib${MAIN}.so
+		endif
+	ifeq ($(UNAME_S),Darwin)
+		CCFLAGS += -D OSX
+		LIBNAME = lib${MAIN}.dylib
+	endif
+	UNAME_M := $(shell uname -m)
+	ifeq ($(UNAME_M),x86_64)
+		CCFLAGS += -D AMD64
+		endif
+	ifneq ($(filter %86,$(UNAME_M)),)
+		CCFLAGS += -D IA32
+		endif
+	ifneq ($(filter arm%,$(UNAME_M)),)
+		CCFLAGS += -D ARM
+	endif
+endif
+
 .PHONY: depend clean
 
 all: $(MAIN)
 
 $(MAIN): $(OBJS)
-	$(CXX) -lc -shared -fPIC -o $(MAIN) $(OBJS)
+	$(CXX) $(LDFLAGS) -o release/$(LIBNAME) $(OBJS)
 
 .cc.o:
-	$(CXX) $(CPPFLAGS) $(INCLUDES) -c $< -o $@
+	$(CXX) $(CCFLAGS) $(INCLUDES) -c $< -o $@
 
 clean:
 	$(RM) *.o *~ $(MAIN)
