--- a/pom.xml
+++ b/pom.xml
@@ -470,6 +470,11 @@
 			<artifactId>oss-text-extractor</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.21</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
